# Business-WorkFlow-Automation

./: .gitignore  PROJECT_BLUEPRINT.md  README.md  app.py  eslint.config.mjs  main.py  memory_graph.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/: .env.example  README.md  requirements.txt  test_api.py  test_regression.py
backend/app/: config.py  main.py  models.py
backend/app/services/: connectors.py  embeddings.py  evaluation.py  execution.py  llm.py  negotiation.py  seller_registry.py  task_store.py  vector_store.py  workflow.py
context_tracker/: gemini_testing.py  librarian.py
docs/: CODE_QUALITY_AND_SECURITY.md  DEPLOYMENT_VERCEL_RAILWAY.md  REPO_STRUCTURE.md
frontend/: 1_Dashboard.py  app.py  package.json  tsconfig.json
frontend/app/: globals.css
frontend/app/operations/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/storage/: page.tsx
frontend/app/vendors/: page.tsx
frontend/components/: dashboard-home.tsx
frontend/lib/: ops-data.ts
frontend/pages/: 1_Dashboard.py
scripts/: dev-down.ps1  dev-up.ps1
src/app/: globals.css  layout.tsx  page.tsx
src/app/operations/: page.tsx
src/app/settings/: page.tsx
src/app/storage/: page.tsx
src/app/vendors/: page.tsx
src/components/: dashboard-home.tsx
