[project]
name = "nextgen-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.6",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]
